--- a/Youtube-E-Commerce/core/AppEcommerce/templates/partials/_header.html
+++ b/Youtube-E-Commerce/core/AppEcommerce/templates/partials/_header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <div class="search-popup">
     <div class="search-popup-container">
 
@@ -39,7 +40,7 @@
 <header id="header" class="site-header header-scrolled position-fixed text-black bg-light">
   <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="{% url 'index' %}">
         <img src="{% static 'images/main-logo.png' %}" class="logo">
       </a>
       <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +50,7 @@
       </button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="bdNavbar" aria-labelledby="bdNavbarOffcanvasLabel">
         <div class="offcanvas-header px-4 pb-0">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="{% url 'index' %}">
             <img src="images/main-logo.png" class="logo">
           </a>
           <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas" aria-label="Close" data-bs-target="#bdNavbar"></button>
@@ -57,55 +58,37 @@
         <div class="offcanvas-body">
           <ul id="navbar" class="navbar-nav text-uppercase justify-content-end align-items-center flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link me-4 active" href="#billboard">Home</a>
+              <a class="nav-link me-4 active" href="#billboard">{% trans 'Anasayfa' %}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link me-4" href="#company-services">Services</a>
+              <a class="nav-link me-4" href="#company-services">{% trans 'Kadın Saat' %}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link me-4" href="#mobile-products">Products</a>
+              <a class="nav-link me-4" href="#mobile-products">{% trans 'Erkek Saat' %}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link me-4" href="#smart-watches">Watches</a>
+              <a class="nav-link me-4" href="#smart-watches">{% trans 'Çocuk Saat' %}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link me-4" href="#yearly-sale">Sale</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link me-4" href="#latest-blog">Blog</a>
+              <a class="nav-link me-4" href="#yearly-sale">{% trans 'Akıllı Saat' %}</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link me-4 dropdown-toggle link-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Pages</a>
+              <a class="nav-link me-4 dropdown-toggle link-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Diller</a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="about.html" class="dropdown-item">About</a>
+                  <a href="{% url 'set-language' 'tr' %}">TR</a>
                 </li>
                 <li>
-                  <a href="blog.html" class="dropdown-item">Blog</a>
-                </li>
-                <li>
-                  <a href="shop.html" class="dropdown-item">Shop</a>
-                </li>
-                <li>
-                  <a href="cart.html" class="dropdown-item">Cart</a>
-                </li>
-                <li>
-                  <a href="checkout.html" class="dropdown-item">Checkout</a>
-                </li>
-                <li>
-                  <a href="single-post.html" class="dropdown-item">Single Post</a>
-                </li>
-                <li>
-                  <a href="single-product.html" class="dropdown-item">Single Product</a>
-                </li>
-                <li>
-                  <a href="contact.html" class="dropdown-item">Contact</a>
+                  <a href="{% url 'set-language' 'en' %}">EN</a>
                 </li>
               </ul>
             </li>
+            
+            {% if request.user.is_authenticated %}
             <li class="nav-item">
               <div class="user-items ps-5">
-                <ul class="d-flex justify-content-end list-unstyled">
+                <ul class="d-flex justify-content-center align-items-center list-unstyled">
+
                   <li class="search-item pe-3">
                     <a href="#" class="search-button">
                       <svg class="search">
@@ -113,13 +96,23 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="pe-3">
-                    <a href="#">
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link me-2 dropdown-toggle link-dark" data-bs-toggle="dropdown" role="button" aria-expanded="false">
                       <svg class="user">
-                        <use xlink:href="#user"></use>
-                      </svg>
-                    </a>
+                      <use xlink:href="#user"></use>
+                    </svg>
+                  </a>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a href="{% url 'profil' %}">Profil</a>
+                      </li>
+                      <li>
+                        <a href="{% url 'logout' %}">Çıkış Yap</a>
+                      </li>
+                    </ul>
                   </li>
+                  
                   <li>
                     <a href="cart.html">
                       <svg class="cart">
@@ -130,6 +123,26 @@
                 </ul>
               </div>
             </li>
+            {% else %}
+            <li class="nav-item">
+              <div class="user-items ps-5">
+                <ul class="d-flex justify-content-end list-unstyled">
+                  <li class="pe-3">
+                    <a href="{% url 'login' %}">
+                      {% trans 'GİRİŞ YAP' %}
+                    </a>
+                  </li>
+                  <li>
+                    <a href="{% url 'register' %}">
+                      {% trans 'ÜYE OL' %}
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+              
+            {% endif %}
+              
           </ul>
         </div>
       </div>
