--- a/Youtube-E-Commerce/core/AppEcommerce/templates/index.html
+++ b/Youtube-E-Commerce/core/AppEcommerce/templates/index.html
@@ -69,7 +69,7 @@
                 </svg>
               </div>
               <div class="icon-box-content">
-                <h3 class="card-title text-uppercase text-dark">Free delivery</h3>
+                  
                 <p>Consectetur adipi elit lorem ipsum dolor sit amet.</p>
               </div>
             </div>
@@ -123,7 +123,7 @@
           <div class="display-header d-flex justify-content-between pb-3">
             <h2 class="display-7 text-dark text-uppercase">{% trans 'Kadın Saatleri' %}</h2>
             <div class="btn-right">
-              <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">{% trans 'Tüm Kadın Saatleri' %}</a>
+              <a href="{% url 'category' %}?cinsiyet=2" class="btn btn-medium btn-normal text-uppercase">{% trans 'Tüm Kadın Saatleri' %}</a>
             </div>
           </div>
           <div class="swiper product-swiper">
@@ -132,7 +132,7 @@
               {% for product in products %}
               
               
-              {% if product.gender.gender == "Kadın" %}
+              {% if product.gender.gender == "Kadın" or product.gender.gender == "Woman" %}
 
               <div class="swiper-slide">
                 <div class="product-card position-relative">
@@ -171,7 +171,7 @@
           <div class="display-header d-flex justify-content-between pb-3">
             <h2 class="display-7 text-dark text-uppercase">{% trans 'Erkek Saatleri' %}</h2>
             <div class="btn-right">
-              <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">{% trans 'Tüm Erkek Saatleri' %}</a>
+              <a href="{% url 'category' %}?cinsiyet=1" class="btn btn-medium btn-normal text-uppercase">{% trans 'Tüm Erkek Saatleri' %}</a>
             </div>
           </div>
           <div class="swiper product-watch-swiper">
@@ -179,7 +179,7 @@
               {% for product in products %}
               
               
-              {% if product.gender.gender == "Erkek" %}
+              {% if product.gender.gender == "Erkek" or product.gender.gender == "Man" %}
               <div class="swiper-slide">
                 <div class="product-card position-relative">
                   <div class="image-holder">
