--- a/Youtube-E-Commerce/core/AppEcommerce/templates/partials/_header.html
+++ b/Youtube-E-Commerce/core/AppEcommerce/templates/partials/_header.html
@@ -57,6 +57,36 @@
         </div>
         <div class="offcanvas-body">
           <ul id="navbar" class="navbar-nav text-uppercase justify-content-end align-items-center flex-grow-1 pe-3">
+            
+            {% if request.path != "/" %}
+            <li class="nav-item">
+              <a class="nav-link me-4 
+              {% if request.path == '/' %}
+              active
+              {% endif %}
+                " href="{% url 'index' %}">{% trans 'Anasayfa' %}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link me-4 
+              {% if request.GET.urlencode == 'cinsiyet=2' %}
+              active
+              {% endif %}
+              " href="{% url 'category' %}?cinsiyet=2">{% trans 'Kadın Saat' %}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link me-4
+              {% if request.GET.urlencode == 'cinsiyet=1' %}
+              active
+              {% endif %}
+              " href="{% url 'category' %}?cinsiyet=1">{% trans 'Erkek Saat' %}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link me-4" href="#smart-watches">{% trans 'Çocuk Saat' %}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link me-4" href="#yearly-sale">{% trans 'Akıllı Saat' %}</a>
+            </li>
+            {% else %}
             <li class="nav-item">
               <a class="nav-link me-4 
               {% if request.path == 'index' %}
@@ -84,6 +114,7 @@
             <li class="nav-item">
               <a class="nav-link me-4" href="#yearly-sale">{% trans 'Akıllı Saat' %}</a>
             </li>
+            {% endif %}
             <li class="nav-item dropdown">
               <a class="dropdown-toggle" id="Dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="
@@ -134,6 +165,9 @@
                     </svg>
                   </a>
                     <ul class="dropdown-menu">
+                      <li>
+                        <a href="{% url 'favorite' %}">Favorilerim</a>
+                      </li>
                       <li>
                         <a href="{% url 'profil' %}">Profil</a>
                       </li>
