--- a/Youtube-E-Commerce/core/AppEcommerce/templates/product-detail.html
+++ b/Youtube-E-Commerce/core/AppEcommerce/templates/product-detail.html
@@ -19,18 +19,138 @@
                       <h5 class="card-text">Model: {{ product.model }}</h5>
                       <h5 class="card-text">Fiyat: {{ product.price }}</h5>
                       <p class="card-text">Açıklama: {{ product.description }}</p>
+                      
+                      <form method="post">
+                        {% csrf_token %}
+                        <div class="d-flex mb-3">
+                          <p class="me-3">Adet: </p>
+                          <button type="button" class="btn btn-primary me-1" id="minus">-</button>
+                          <input type="number" class="form-control w-25 me-1" name="quantity" value="1" id="quantity">
+                          <button type="button" class="btn btn-primary" id="plus">+</button>
+                        </div>
                       <div class="d-flex justify-content-between">
                         <a href="#" class="btn btn-primary">Favorilere Ekle</a>
-                        <form method="post">
-                            {% csrf_token %}
                             <input type="hidden" value="{{ product.id }}" name="productid">
-                            <button type="submit" class="btn btn-primary">Sepete Ekle</button>
-                        </form>
+                            <button type="submit" class="btn btn-primary" name="submit" value="btnbasket">Sepete Ekle</button>
                       </div>
+                        </form>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <form method="post">
+                    {% csrf_token %}
+                    <section style="background-color: #eee;">
+                        <div class="container my-5 py-5">
+                          <div class="row d-flex justify-content-center">
+                            <div class="col-md-12 col-lg-10 col-xl-8">
+
+                              <div class="card">
+
+                                
+                                {% for comment in comments %}
+
+                                <div class="card-body position-relative">
+                                  <div class="d-flex flex-start align-items-center">
+                                    <div>
+                                      <h6 class="fw-bold text-primary mb-1">{{ comment.first_name }} {{ comment.last_name }}</h6>
+                                      <p class="text-muted small mb-0">
+                                        {{ comment.create_date }}
+                                      </p>
+                                    </div>
+                                  </div>
+                      
+                                  <p class="mt-3 mb-4 pb-2">
+                                    {{ comment.comment }}
+                                  </p>
+                                  <button type="button" class="btn btn-primary position-absolute top-0 end-0" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                    <i class="fa-solid fa-pencil"></i>
+                                  </button>
+                                  <!-- Modal -->
+                                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                      <div class="modal-dialog">
+                                        <div class="modal-content">
+                                          <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Yorum Düzenle</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                          </div>
+                                          <div class="modal-body">
+                                            <div class="card-footer py-3 border-top-1 mt-3" style="background-color: #f8f9fa;">
+                                              <div class="d-flex flex-start w-100">
+                                                <div class="form-outline w-100">
+                                                  <textarea class="form-control" id="textAreaExample" rows="4"
+                                                    style="background: #fff;" name="comment" required>{{ comment.comment }}</textarea>
+                                                  <label class="form-label" for="textAreaExample">{% trans 'Yorum Yaz' %}</label>
+                                                </div>
+                                              </div>
+                                              <div class="float-end mt-2 pt-1">
+                                                <input type="hidden" name="comment_id" value="{{ comment.id }}">
+                                                <button type="submit" class="btn btn-primary btn-sm" name="submit" value="commentupdate">{% trans 'Yorum Yap' %}</button>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                </div>
+                                {% endfor %}
+
+                                
+                                {% if comment_user is None %}
+
+                                <div class="card-footer py-3 border-top-1 mt-3" style="background-color: #f8f9fa;">
+                                  <div class="d-flex flex-start w-100">
+                                    <div class="form-outline w-100">
+                                      <textarea class="form-control" id="textAreaExample" rows="4"
+                                        style="background: #fff;" name="comment" required></textarea>
+                                      <label class="form-label" for="textAreaExample">{% trans 'Yorum Yaz' %}</label>
+                                    </div>
+                                  </div>
+                                  <div class="float-end mt-2 pt-1">
+                                    <button type="submit" class="btn btn-primary btn-sm" name="submit" value="btncomment">{% trans 'Yorum Yap' %}</button>
+                                  </div>
+                                </div>
+                                {% endif %}
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </section>
+                </form>
             </div>
         </div>
     </div>
 {% endblock content %}
     
+
+{% block extrajs %}
+  <script>
+    var minus = document.getElementById("minus")
+    var plus = document.getElementById("plus")
+    var quantity = document.getElementById("quantity")
+
+    checkQuantity();
+
+    minus.addEventListener("click", function(){
+      quantity.value = parseInt(quantity.value) - 1;
+      checkQuantity();
+  });
+  
+  plus.addEventListener("click", function(){
+      quantity.value = parseInt(quantity.value) + 1;
+      checkQuantity();
+  });
+
+  function checkQuantity() {
+    var currentValue = parseInt(quantity.value);
+    if (currentValue <= 1) {
+        minus.disabled = true;
+    } else {
+        minus.disabled = false;
+    }
+}
+  </script>
+{% endblock extrajs %}
+  
